--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.4.2'
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
+    implementation 'com.google.accompanist:accompanist-insets:0.23.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
