--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id "kotlin-kapt"
+    id "kotlin-parcelize"
 }
 
 android {
@@ -55,8 +58,34 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.navigation:navigation-compose:2.4.2'
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
-    implementation 'com.google.accompanist:accompanist-insets:0.23.1'
+
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
+
+    implementation "com.google.accompanist:accompanist-webview:0.24.7-alpha"
+//    implementation "com.google.accompanist:accompanist-coil:0.15.0"
+    implementation "io.coil-kt:coil-compose:2.0.0-rc03"
+
+    implementation "io.insert-koin:koin-android:3.1.6"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
+
+    implementation "androidx.datastore:datastore-preferences:$datastore_version"
+    implementation "androidx.datastore:datastore-core:$datastore_version"
+//    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.20"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-compose:$paging_compose_version"
+
+    implementation "androidx.constraintlayout:constraintlayout-compose:$constraint_compose_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
