--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,17 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation "androidx.compose.material3:material3:1.0.0-alpha09"
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.navigation:navigation-compose:2.4.2'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-core:1.0.0"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha14"
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
@@ -67,25 +70,14 @@ dependencies {
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
     implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
     implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-webview:$accompanist_version"
 
-    implementation "com.google.accompanist:accompanist-webview:0.24.7-alpha"
-//    implementation "com.google.accompanist:accompanist-coil:0.15.0"
     implementation "io.coil-kt:coil-compose:2.0.0-rc03"
-
     implementation "io.insert-koin:koin-android:3.1.6"
-    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.google.code.gson:gson:2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
-
-    implementation "androidx.datastore:datastore-preferences:$datastore_version"
-    implementation "androidx.datastore:datastore-core:$datastore_version"
-//    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.20"
-
-    implementation "androidx.paging:paging-runtime:$paging_version"
-    implementation "androidx.paging:paging-compose:$paging_compose_version"
-
-    implementation "androidx.constraintlayout:constraintlayout-compose:$constraint_compose_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
