--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,12 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
     implementation 'androidx.webkit:webkit:1.4.0'
 
+    def room_version = "2.4.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-paging:2.5.0-alpha01"
+    kapt("androidx.room:room-compiler:$room_version")
+
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
     implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
@@ -81,6 +87,7 @@ dependencies {
 
     implementation "io.coil-kt:coil-compose:2.0.0"
     implementation "io.insert-koin:koin-android:3.2.0"
+    implementation "io.insert-koin:koin-androidx-compose:3.2.0"
     implementation "com.google.code.gson:gson:2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
