--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,16 +55,17 @@ dependencies {
     implementation "androidx.compose.ui:ui-util:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-//    implementation "androidx.compose.material3:material3:1.0.0-alpha09"
+//    implementation "androidx.compose.material3:material3:1.0.0-alpha12"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.material:material-ripple:$compose_version"
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.navigation:navigation-compose:2.4.2'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.datastore:datastore-core:1.0.0"
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     implementation "androidx.paging:paging-compose:1.0.0-alpha14"
-    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
     implementation 'androidx.webkit:webkit:1.4.0'
     implementation 'androidx.browser:browser:1.4.0'
 
@@ -87,7 +88,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-webview:$accompanist_version"
 //    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
 
-    implementation "io.coil-kt:coil-compose:2.0.0"
+    implementation "io.coil-kt:coil-compose:2.1.0"
     implementation "io.insert-koin:koin-android:3.2.0"
     implementation "io.insert-koin:koin-androidx-compose:3.2.0"
     implementation "com.google.code.gson:gson:2.9.0"
