--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
     ext {
-        compose_version = '1.2.0-alpha07' // alpha08 LazyColumn嵌套Banner会崩溃
-        accompanist_version = '0.24.6-alpha'
+        compose_version = '1.2.0-beta02' // alpha08 LazyColumn嵌套Banner会崩溃
+        accompanist_version = '0.24.9-beta'
         retrofit_version = "2.9.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.android.application' version '7.2.1' apply false
+    id 'com.android.library' version '7.2.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
 
 task clean(type: Delete) {
