update AGP 7.3.1 & compose version 1.3.1.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,17 @@ plugins {
     id 'kotlin-android'
     id "kotlin-kapt"
     id "kotlin-parcelize"
+//    id "com.google.devtools.ksp" version "1.7.10-1.0.6"
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
+    buildToolsVersion '33.0.0'
 
     defaultConfig {
         applicationId "com.compose.wanandroid"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -29,11 +31,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     buildFeatures {
         compose true
@@ -50,26 +52,26 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-util:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-//    implementation "androidx.compose.material3:material3:1.0.0-alpha12"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+//    implementation "androidx.compose.material3:material3:1.0.1"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.material:material-ripple:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'androidx.navigation:navigation-compose:2.4.2'
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.datastore:datastore-core:1.0.0"
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha14"
-    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
-    implementation 'androidx.webkit:webkit:1.4.0'
+    implementation "androidx.paging:paging-compose:1.0.0-alpha17"
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation 'androidx.webkit:webkit:1.5.0'
     implementation 'androidx.browser:browser:1.4.0'
 
-    def room_version = "2.5.0-alpha01"
+    def room_version = "2.5.0-beta02"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-paging:$room_version"
@@ -88,17 +90,17 @@ dependencies {
     implementation "com.google.accompanist:accompanist-webview:$accompanist_version"
 //    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
 
-    implementation "io.coil-kt:coil-compose:2.1.0"
-    implementation "io.insert-koin:koin-android:3.2.0"
-    implementation "io.insert-koin:koin-androidx-compose:3.2.0"
-    implementation "com.google.code.gson:gson:2.9.0"
+    implementation "io.coil-kt:coil-compose:2.2.2"
+    implementation "io.insert-koin:koin-android:3.3.0"
+    implementation "io.insert-koin:koin-androidx-compose:3.3.0"
+    implementation "com.google.code.gson:gson:2.10"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
