--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,29 @@
 buildscript {
     ext {
-        compose_version = '1.2.0-beta02' // alpha08 LazyColumn嵌套Banner会崩溃
-        accompanist_version = '0.24.9-beta'
+        compose_version = '1.3.1' // alpha08 LazyColumn嵌套Banner会崩溃
+        accompanist_version = '0.27.0'
         retrofit_version = "2.9.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+allprojects {
+
+    // Suppress Compose Kotlin compiler compatibility warning
+//    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+//        kotlinOptions {
+//            freeCompilerArgs += [
+//                    "-P",
+//                    "plugin:androidx.compose.compiler.plugins.kotlin:suppressKotlinVersionCompatibilityCheck=1.7.21"
+//            ]
+//        }
+//    }
 }
